# web-poker

./: .coverage  .gitignore  main.py  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js  vite.config.ts
poker/: events.py  server.py
poker/game/: engine.py  evaluator.py  tournament.py
src/: app.html
src/lib/: socket.ts  store.svelte.ts  types.ts
src/lib/components/: ActionBar.svelte  BlindTimer.svelte  Card.svelte  LobbyWaiting.svelte  PlayerSeat.svelte  Table.svelte  WinnerScreen.svelte
src/routes/: +page.svelte  layout.css
src/routes/room/[id]/: +page.svelte
tests/game/: test_evaluator.py  test_tournament.py
